--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,19 @@
+@media only screen and (max-width: 600px) {
+.container {
+    -webkit-transform:scale(0.6);
+    -moz-transform:scale(0.6);
+    -ms-transform:scale(0.6);
+    transform:scale(0.6);
+}
+#md {
+    font-size: 25px;
+}
+}
 body {
     font-family: 'Courier New', Courier, monospace;
     background-color: rgb(240, 240, 240)
 }
-#header-div {
+.header-div {
     display: flex;
     align-items: center;
     justify-content: center;
